<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting">
    <CheckBoxPreference
    android:title="@string/is_open"
        android:defaultValue="false"
    android:key="switch">

    </CheckBoxPreference>

    <ListPreference
        android:title="@string/color_mode"
        android:defaultValue="0"
        android:entries="@array/mode_title"
        android:entryValues="@array/mode_value"
        android:key="mode">

    </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:title="@string/help_title"
            android:summary="@string/help">
        </Preference>
        <Preference
            android:title="@string/author_title"
            android:summary="@string/author">
        </Preference>
        <Preference
            android:title="@string/project_title"
            android:summary="@string/github">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>